add click feedback to mobile buttons

--- a/resources/style.css
+++ b/resources/style.css
@@ -128,6 +128,7 @@ hr {
 
 @media only screen and (max-width: 600px) {
     .mobile-controls {
+        user-select: none;
         display: block;
         position: fixed;
         left: 0;
@@ -140,7 +141,7 @@ hr {
 
     .mobile-controls-button {
         display: inline-block;
-        width: calc(33% - 2px);
+        width: calc(33.33% - 2px);
         font-size: 1.2em;
         padding-top: 0.25em;
         padding-bottom: 0.25em;
