--- a/html/resources/stylesheets/style.css
+++ b/html/resources/stylesheets/style.css
@@ -3,8 +3,8 @@ body {
     font-size: 14px;
     line-height: 1.5em;
 
-    background: #1e2022;
-    color: #bbb;
+    background: var(--body-bg);
+    color: var(--body-fg-0);
     margin: 0 0;
 }
 
@@ -14,17 +14,17 @@ img {
 }
 
 code {
-    background-color: #151618;
+    background-color: var(--code-bg);
     padding: 0.1em 0.1em;
 }
 
-a { color: #6e7aac; text-decoration: none; }
-a:visited { color: #6e7aac; text-decoration: none; }
-a:hover { color: #6e7aac; text-decoration: underline; }
+a { color: var(--link-fg); text-decoration: none; }
+a:visited { color: var(--link-fg); text-decoration: none; }
+a:hover { color: var(--link-fg); text-decoration: underline; }
 
 hr {
     border: transparent;
-    border-top: 1px solid #2a2a2a;
+    border-top: 1px solid var(--border-0);
     margin: 0.5em 0 0.5em 0;
 }
 
@@ -68,7 +68,7 @@ hr {
     max-width: 500px;
     margin: auto;
     font-size: 0.9em;
-    color: #aaa;
+    color: var(--grey-0);
     word-break: break-word;
 }
 
@@ -99,7 +99,7 @@ hr {
     user-select: none;
     display: block;
     text-align: center;
-    color: #555;
+    color: var(--grey-1);
 }
 
 .board-time {
@@ -117,7 +117,7 @@ hr {
     user-select: none;
     max-width: 500px;
     margin: auto;
-    color: #aaa;
+    color: var(--grey-0);
     word-break: break-word;
     margin-bottom: 0.5em;
 }
@@ -135,7 +135,7 @@ hr {
         bottom: 0;
         width: 100%;
         height: 4.5em;
-        background-color: #151618;
+        background-color: var(--code-bg);
         z-index: 1;
     }
 
@@ -146,8 +146,10 @@ hr {
         padding-top: 0.25em;
         padding-bottom: 0.25em;
         text-align: center;
-        border: 1px solid #111;
+        border: 1px solid var(--border-2);
     }
+
+    .greeter-footer { margin-bottom: 6em; }
 
     .mobile-controls-button-next { background: #353b2a; }
     .mobile-controls-button-previous { background: #422e2e; }
@@ -164,7 +166,7 @@ Styling for threads
 .thread-parent {
     padding: 0.5em 1em;
     margin-bottom: 5em;
-    background: #151618;
+    background: var(--thread-bg);
 }
 
 @media only screen and (max-width: 600px) {
@@ -202,7 +204,7 @@ Don't display replies or collapsible anchor for OP
 .thread-op > a:hover,
 .thread-op > a:visited
 {
-    color: #555;
+    color: var(--grey-1);
     float: right;
 }
 
@@ -220,7 +222,7 @@ Don't display replies or collapsible anchor for OP
 .thread-sub {
     font-size: 1.4em;
     font-weight: bold;
-    color: #ddd;
+    color: var(--body-fg-1);
     margin-top: 0.5em;
     margin-bottom: 0.5em;
 }
@@ -239,19 +241,19 @@ Don't display replies or collapsible anchor for OP
 
 .thread-replies {
     display: inline;
-    color: #777;
+    color: var(--grey-3);
 }
 
 .thread-images {
     display: inline;
-    color: #777;
+    color: var(--grey-3);
 }
 
 .thread-time {
     user-select: none;
     display: block;
     text-align: left;
-    color: #555;
+    color: var(--grey-1);
 }
 
 .thread-thumbnail {
@@ -277,7 +279,7 @@ Styling for thread options
 .thread-options {
     user-select: none;
     margin: 0 0 0.5em 0.5em;
-    color: #666;
+    color: var(--grey-2);
     text-align: right;
     float: right;
 }
@@ -286,11 +288,11 @@ Styling for thread options
     display: block;
     margin: 0.5em  0 1em 0;
     text-align: left;
-    color: #777;
+    color: var(--grey-3);
 }
 
 .thread-files-dump > div > a {
-    color: #579394;
+    color: var(--file-fg-0);
     word-break: break-all;
 }
 
@@ -304,7 +306,7 @@ Styling for posts
 */
 
 .post-parent-r {
-    border-left: 1px solid #282a2e;
+    border-left: 1px solid var(--border-1);
     margin-left: 1em;
 }
 
@@ -317,7 +319,7 @@ Styling for posts
 .post-parent-r > .no-embed { margin-left: 0; }
 
 .post-parent {
-    background: #282a2e;
+    background: var(--parent-bg);
     padding: 0.5em 1em;
     margin-bottom: 0.5em;
     display: inline-block;
@@ -330,7 +332,7 @@ Styling for posts
 .post-details {
     user-select: none;
     margin-bottom: 0.5em;
-    color: #555;
+    color: var(--grey-1);
 }
 
 .post-no {
@@ -340,7 +342,7 @@ Styling for posts
 .post-has-file {
     display: inline-flex;
     margin-right: 0.5em;
-    color: #4f7576;
+    color: var(--file-fg-1);
     max-width: 3em;
     overflow: hidden;
 }
@@ -348,7 +350,7 @@ Styling for posts
 .post-complexity {
     display: inline-flex;
     margin-right: 0.5em;
-    color: #b35071;
+    color: var(--complexity-fg);
     max-width: min(25%, 15em);
     overflow: hidden;
     max-height: 1em;
@@ -357,7 +359,7 @@ Styling for posts
 .post-complexity-number {
     display: inline;
     margin-right: 0.5em;
-    color: #555;
+    color: var(--grey-1);
 }
 
 .post-file {
@@ -366,14 +368,14 @@ Styling for posts
 }
 
 .post-file > a {
-    color: #579394;
+    color: var(--file-fg-0);
 }
 
 .post-details-2 {
     user-select: none;
     margin-top: 0.5em;
     font-size: 0.9em;
-    color: #555;
+    color: var(--grey-1);
 }
 
 .post-time,
@@ -381,7 +383,7 @@ Styling for posts
 .post-id {
     display: inline;
     margin-right: 1em;
-    color: #555;
+    color: var(--grey-1);
 }
 
 .post-succ {
@@ -403,12 +405,12 @@ Styling for posts
 
 .green-text {
     display: inline;
-    color: #b5bd68;
+    color: var(--greentext-fg);
 }
 
 .reply-text {
     display: inline;
-    color: #6e7aac;
+    color: var(--link-fg);
 }
 
 .post-a {
@@ -424,7 +426,7 @@ Styling for collapsible
     min-width: min(30em, 80%);
     min-height: 1.5em;
     max-height: 1.5em;
-    background: #202022;
+    background: var(--collapsed-bg);
     overflow: hidden;
     vertical-align: top;
 }
@@ -455,11 +457,11 @@ Styling for collapsible
 }
 
 .collapsed-thread-parent.thread-is-404d {
-    border-bottom: 6px solid #381919;
+    border-bottom: 6px solid var(--border-is-404d);
 }
 
 .collapsed-thread-parent.thread-is-archived {
-    border-bottom: 6px solid #312d11;
+    border-bottom: 6px solid var(--border-is-archived);
 }
 
 .collapsed-thread-parent > .thread-thumbnail {
@@ -491,7 +493,7 @@ Styling for collapsible
 .thread-collapsible-anchor {
     display: inline;
     margin-right: 0.5em;
-    color: #555;
+    color: var(--grey-1);
     font-size: 1.4em;
 }
 
