add theme selector, add two new themes, tweak page layout, update js post highlight

--- a/html/resources/stylesheets/light.css
+++ b/html/resources/stylesheets/light.css
@@ -4,28 +4,28 @@
     --body-bg: #fff;
     --code-bg: #eee;
 
-    --thread-bg: #ddd;
-    --parent-bg: #ccc;
-    
-    --collapsed-bg: #bbb;
-    --border-is-404d: #de7575;
-    --border-is-archived: #e3d88a;
-    
+    --thread-bg: #eee;
+    --parent-bg: #ddd;
+
+    --collapsed-bg: #ccc;
+    --border-is-404d: #dc8686;
+    --border-is-archived: #e2da9b;
+
     --body-fg-0: #333;
     --body-fg-1: #444;
     --link-fg: #40508d;
-  
+
     --file-fg-0: #387a7b;
     --file-fg-1: #305657;
     --complexity-fg: #842b48;
-    --greentext-fg: #6e7f34;
-  
+    --greentext-fg: #4d6305;
+
     --border-0: #ddd;
     --border-1: #bbb;
-    --border-2: #aaa;
-  
+    --border-2: #111;
+
     --grey-0: #555;
-    --grey-1: #333;
-    --grey-2: #555;
-    --grey-3: #666;
+    --grey-1: #555;
+    --grey-2: #666;
+    --grey-3: #777;
 }
