--- a/html/resources/stylesheets/style.css
+++ b/html/resources/stylesheets/style.css
@@ -72,14 +72,14 @@ hr {
     word-break: break-word;
 }
 
-.greeter-info > div > b,
-.greeter-shortcut-list > div > b {
+.greeter-info > div > b {
     display: block;
-    margin-top: 0.5em;
+    font-size: 1.3em;
+    margin-top: 1em;
+    margin-bottom: 0.2em;
 }
 
 .greeter-usage-list,
-.greeter-shortcut-list,
 .greeter-footer-list {
     padding-left: 0;
     margin: 0 2em 0 2em;
@@ -122,6 +122,20 @@ hr {
     margin-bottom: 0.5em;
 }
 
+.greeter-shortcut-table > tbody > tr > td {
+    vertical-align: top;
+    min-width: 14em;
+}
+
+.greeter-shortcut-table > tbody > tr{
+    line-height: 1em;
+}
+
+.greeter-shortcut-table > thead > tr {
+    font-weight: bold;
+    line-height: 1.2em;
+}
+
 .mobile-controls {
     display: none;
 }
@@ -143,6 +157,7 @@ hr {
         display: inline-block;
         width: calc(33.33% - 2px);
         font-size: 1.2em;
+        color: #ccc;
         padding-top: 0.25em;
         padding-bottom: 0.25em;
         text-align: center;
@@ -156,7 +171,7 @@ hr {
     .mobile-controls-button-parent { background: #2b383f; }
     .mobile-controls-button-child { background: #483e2b; }
     .mobile-controls-button-forward { background: #222; }
-    .mobile-controls-button-toggle-expand { background: #111; }
+    .mobile-controls-button-toggle-collapse { background: #111; }
 }
 
 /*
